--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "Aarti Bobhate Hello, World!"
+          command: "aarti1409 Hello, World!"
 
 # Invoke jobs via workflows 
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
