--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
+          name: "Say Aarti"
           command: "aarti Hello, World!"
 
 # Invoke jobs via workflows 
